--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
   <body>
     <h1>Discover hidden places around the world</h1>
     <h4>Download Excursion (Coming soon!)</h4>
+    <p><video src="resources/videos/excursion.mp4">Problems with display</video></p>
     <h2>Your personal travel guide</h2>
     <p>
       Excursion remembers places you like, and recommnends new points of
       interest around you.
     </p>
+    <p><img src="resources/images/camp.jpg" alt="camp site in the night"/></p>
+    <p></p><img src="resources/images/phone.png" alt="picture of phone" /></p>
     <h2>Coming Soon for iPhone and Android</h2>
     <h4>Download Excursion (Coming soon!)</h4>
+    <p>Excursion&</p>
   </body>
 </html>
