--- a/index.html
+++ b/index.html
@@ -5,21 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Excursion</title>
-    <link type="stylesheert" href="style.css"></link>
+    <link rel="stylesheet" href="resources/css/style.css" />
   </head>
   <body>
     <h1>Discover hidden places around the world</h1>
-    <h4>Download Excursion (Coming soon!)</h4>
-    <p><video src="resources/videos/excursion.mp4">Problems with display</video></p>
+    <a href="">Download Excursion (Coming soon!)</a>
+    <div>
+      <video autoplay>
+        <source src="resources/videos/excursion.mp4" type="video/mp4" />
+        Problems with display
+      </video>
+    </div>
     <h2>Your personal travel guide</h2>
     <p>
       Excursion remembers places you like, and recommnends new points of
       interest around you.
     </p>
-    <p><img src="resources/images/camp.jpg" alt="camp site in the night"/></p>
-    <p></p><img src="resources/images/phone.png" alt="picture of phone" /></p>
+    <div>
+      <img src="resources/images/camp.jpg" alt="camp site in the night" />
+    </div>
+    <div><img src="resources/images/phone.png" alt="picture of phone" /></div>
     <h2>Coming Soon for iPhone and Android</h2>
-    <h4>Download Excursion (Coming soon!)</h4>
-    <p>Excursion&</p>
+    <a href="">Download Excursion (Coming soon!)</a>
+    <p class="end">Excursion©</p>
   </body>
 </html>
