--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Discover hidden places around the world</h1>
     <a href="">Download Excursion (Coming soon!)</a>
     <div>
-      <video autoplay>
+      <video autoplay muted loop>
         <source src="resources/videos/excursion.mp4" type="video/mp4" />
         Problems with display
       </video>
